# cpp-tutor

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
.github/workflows/: apple-silicon.yml  x86-ubuntu.yml  x86-windows.yml  x86.yml
include/: cpp_tutor.h.in  cpp_tutor_helper.h  cppt_ag.hpp.in  cppt_tools.hpp  deep_vs_shallow.hpp  memory_block.hpp  strings.hpp  strings_object.hpp  strings_pool.hpp  strings_reverse.hpp
src/: CMakeLists.txt  auto_vs_decltype.cpp  auto_vs_decltype_main.cpp  const_vs_constexpr.cpp  const_vs_constexpr_main.cpp  copy_and_swap_idiom_main.cpp  cpp_tutor_helper.cpp  cppt_tools.cpp  deep_vs_shallow.cpp  deep_vs_shallow_main.cpp  delete_vs_default_main.cpp  init_aggregate_main.cpp  init_brace_elision_main.cpp  init_list_gotchas_main.cpp  init_stack_vs_global_vars_main.cpp  init_types_of_main.cpp  memory_block.cpp  memory_block_main.cpp  misc_main.cpp  noexcept_main.cpp  null_vs_nullptr_main.cpp  override_final_main.cpp  pointers.cpp  pointers_main.cpp  rvalue_vs_lvalue.cpp  rvalue_vs_lvalue_main.cpp  rvo.cpp  rvo_main.cpp  set_new_handler_example.cpp  smart_pointers_main.cpp  static_assert_main.cpp  strings.cpp  strings_1_main.cpp  strings_2_main.cpp  strings_3_main.cpp  strings_object.cpp  strings_object_main.cpp  strings_pool.cpp  strings_pool_main.cpp  strings_reverse.cpp  (+4 more)
src/strings/: CMakeLists.txt  strings_1_main.cpp  strings_2_main.cpp  strings_3_main.cpp  strings_pool_main.cpp
test/: cpp_tutor_ut_main.cpp  tests_strings.cpp  tests_strings_1.cpp  tests_strings_object.cpp  tests_strings_pool.cpp
